# xiaomi_plugin_power_influxdb

./: .env.template  .gitignore  Dockerfile  main.py  pyproject.toml  readme-en.md  readme.md  requirements.txt  task.py
